working version, ported from se.alipsa.groovy:data-utils

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <module>saw</module>
         <module>arrow</module>
         <module>docs-src</module>
+        <module>ods</module>
     </modules>
 
     <profiles>
@@ -284,7 +285,13 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.30</version>
+                <version>1.7.36</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>1.7.36</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
